--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <div class="cta-buttons">
                     <a href="#metodos" class="btn-primary"><i class="fa-solid fa-prescription-bottle-medical"></i> Métodos Contraceptivos</a>
-                    <a href="/page/saibamais.html" class="btn-secondary"><i class="fa-solid fa-user-nurse"></i> Saiba mais</a>
+                    <a href="./saibamais.html" class="btn-secondary"><i class="fa-solid fa-user-nurse"></i> Saiba mais</a>
                 </div>
             </div>
 
